package com.cfhayes.patterns.abstractfactory;

public class VisaCreditCard extends CreditCard {

	
	
}
