@startuml

abstract class CreditCardFactory {
  + {static} getCreditCardFactory(creditScore) : CreditCardFactory
  + {abstract} getCreditCard(cardType) : CreditCard
  + {abstract} getValidator(cardType) : Validator
}

class VisaFactory {
  + getCreditCard(cardType) : CreditCard
  + getValidator(cardType) : Validator
}

class AmexFactory {
  + getCreditCard(cardType) : CreditCard
  + getValidator(cardType) : Validator
}

abstract class CreditCard {
  - cardNumberLength : int
  - cscNumber : int
  ---
  getters and setters
}

class VisaCreditCard {
}

VisaFactory -up-|> CreditCardFactory
VisaFactory .right.> CreditCard
VisaCreditCard -up-|> CreditCard
VisaGoldCreditCard -up-|> VisaCreditCard

AmexFactory -up-|> CreditCardFactory
AmexFactory .right.> CreditCard
AmexCreditCard -up-|> CreditCard
AmexGoldCreditCard -up-|> AmexCreditCard

@enduml